<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.tln.personalcard.usuario.ui.initialization.forgotpassword.InitializationForgotPasswordViewModel" />

        <variable
            name="continueClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/telenetColorSurface"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/telenetColorSurface">

            <ImageView
                android:id="@+id/initializationForgotPasswordIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:src="@drawable/initialization_password_icon"
                app:layout_constraintEnd_toEndOf="@+id/initializationForgotPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationForgotPasswordStartGuideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/initializationForgotPasswordTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center_horizontal"
                android:text="@string/initialization_forgot_password_title"
                android:textColor="@color/telenetColorOnSurface"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/initializationForgotPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationForgotPasswordStartGuideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationForgotPasswordIcon" />

            <TextView
                android:id="@+id/initializationForgotPasswordMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center_horizontal"
                android:text="@string/initialization_forgot_password_message"
                android:textColor="@color/telenetColorOnSurface"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/initializationForgotPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationForgotPasswordStartGuideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationForgotPasswordTitle"
                tools:text="@string/initialization_welcome_first_access_message" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/initializationForgotPasswordCpf"
                style="@style/AppTheme.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:hint="@string/initialization_forgot_password_cpf"
                app:layout_constraintEnd_toEndOf="@+id/initializationForgotPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationForgotPasswordStartGuideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationForgotPasswordMessage">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789.-/"
                    android:inputType="number"
                    android:text="@={viewModel.cpf}"
                    app:mask="@{@string/mask_cpf}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/initializationForgotPasswordContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_client"
                android:fontFamily="@font/font_regular"
                android:onClickListener="@{continueClickListener}"
                android:text="@string/initialization_forgot_password_continue"
                android:textAllCaps="false"
                android:textColor="@color/button_client"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/initializationForgotPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationForgotPasswordStartGuideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationForgotPasswordCpf" />

            <TextView
                android:id="@+id/initializationForgotPasswordHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center"
                android:onClickListener="@{() -> viewModel.helpClicked()}"
                android:padding="18dp"
                android:text="@string/initialization_forgot_password_help"
                android:textColor="@color/telenetColorOnSurface"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/initializationForgotPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationForgotPasswordStartGuideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationForgotPasswordContinue"
                app:layout_constraintVertical_bias="0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/initializationForgotPasswordStartGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/initializationForgotPasswordEndGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>