<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="br.com.tln.personalcard.usuario.ui.initialization.forgotpassword.RecoveryPasswordSuccessViewModel" />

        <variable
                name="loginClickListener"
                type="android.view.View.OnClickListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/telenetColorSurface"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/recoveryPasswordSuccessIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="132dp"
                android:src="@drawable/recovery_password_success_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/recoveryPasswordSuccessTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center_horizontal"
                android:text="@string/initialization_forgot_password_title"
                android:textColor="@color/telenetColorOnSurface"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recoveryPasswordSuccessIcon" />

        <TextView
                android:id="@+id/recoveryPasswordSuccessMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center_horizontal"
                android:text="@string/recovery_password_success_message"
                android:textColor="@color/telenetColorOnSurface"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recoveryPasswordSuccessTitle" />

        <Button
                android:id="@+id/recoveryPasswordSuccessLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_client"
                android:fontFamily="@font/font_regular"
                android:onClickListener="@{loginClickListener}"
                android:text="@string/recovery_password_success_login"
                android:textAllCaps="false"
                android:textColor="@color/button_client"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recoveryPasswordSuccessMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>