<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.tln.personalcard.usuario.ui.initialization.password.InitializationPasswordViewModel" />

        <variable
            name="continueClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/telenetColorSurface"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/telenetColorSurface">

            <ImageView
                android:id="@+id/initializationPasswordIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:src="@drawable/initialization_password_icon"
                app:layout_constraintEnd_toEndOf="@+id/initializationPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationPasswordStartGuideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/initializationPasswordTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center_horizontal"
                android:text="@string/initialization_password_title"
                android:textColor="@color/telenetColorOnSurface"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/initializationPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationPasswordStartGuideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationPasswordIcon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/initializationPasswordPassword"
                style="@style/AppTheme.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:hint="@string/initialization_password_password"
                app:layout_constraintEnd_toEndOf="@+id/initializationPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationPasswordStartGuideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationPasswordTitle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/initializationPasswordContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_client"
                android:enabled="@{safeUnbox(viewModel.validPassword)}"
                android:fontFamily="@font/font_regular"
                android:onClickListener="@{continueClickListener}"
                android:text="@string/initialization_password_continue"
                android:textAllCaps="false"
                android:textColor="@color/button_client"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/initializationPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationPasswordStartGuideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationPasswordPassword" />

            <TextView
                android:id="@+id/initialization"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center"
                android:onClickListener="@{() -> viewModel.forgotPasswordClicked()}"
                android:padding="18dp"
                android:text="@string/initialization_password_forgot_password"
                android:textColor="@color/telenetColorOnSurface"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/initializationPasswordEndGuideline"
                app:layout_constraintStart_toStartOf="@+id/initializationPasswordStartGuideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationPasswordContinue"
                app:layout_constraintVertical_bias="0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/initializationPasswordStartGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/initializationPasswordEndGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>